# crow-world

./: .gitignore  README  README.md  index.html  meson.build  style.css
.github/workflows/: main.yml
db/: count_posts.sql  create_posts_table.sql  insert_post.sql  select_all_posts.sql  select_posts_paginated.sql  storage.db
include/: html_shared.hpp  post.hpp
rsc/: index.js  style.css
src/: .gitignore  build.sh  gallery.cpp  gallery.h  html_shared.cpp  html_shared.h  index.html  main.cpp  post.cpp  post.h  style.css
src/file/: not_about_that.bsp
